--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,21 +3,31 @@
     <%= flash[:notice_destroy] %>
   </div>
 <% end %>
+
+<h1>User info</h1>
+<%= image_tag current_user.get_profile_image(100,100) %>
+<h3>name：<%= current_user.name %></h3>
+<h3>introduction：<%= current_user.introduction %></h3>
+
+<%= link_to edit_user_path(current_user.id) do %>
+  <button type="button" class="btn btn-outline-secondary"><i class="fas fa-user-cog"></i></button>
+<% end %>
 <h1>Books</h1>
 
 
-    <% @lists.each do |list| %>
-      <div class="col-lg-8" style="background-color: orange;">
-        <div>投稿ユーザー画像：<%= image_tag list.user.get_profile_image(100,100) %></div>
-        <div class="book_title"><%= list.title %></div>
-        <div class="book_body"><%= list.body %></div>
-        <%= link_to "Show", book_path(list.id) %>
-        <% if list.user == current_user %>
-          <%= link_to "Edit", edit_book_path(list.id) %>
-          <%= link_to "Destroy", book_path(list.id), method: :delete, "data-confirm" => "Are you sure?" %>
-        <% end %>
-      </div>
+
+<% @lists.each do |list| %>
+  <div class="col-lg-8" style="background-color: orange;">
+    <div>投稿ユーザー画像：<%= image_tag list.user.get_profile_image(100,100) %></div>
+    <div class="book_title"><%= list.title %></div>
+    <div class="book_body"><%= list.body %></div>
+    <%= link_to "Show", book_path(list.id) %>
+    <% if list.user == current_user %>
+      <%= link_to "Edit", edit_book_path(list.id) %>
+      <%= link_to "Destroy", book_path(list.id), method: :delete, "data-confirm" => "Are you sure?" %>
     <% end %>
+  </div>
+<% end %>
 
 <div class="white"></div>
 
@@ -43,7 +53,7 @@
   <h4>Body</h4>
   <%= f.text_area :body %>
   <div>
-    <%= f.submit 'Create Book' %>
+    <%= f.submit "Create Book", class:"btn btn-success" %>
   </div>
 
 <% end %>
