--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,29 +9,50 @@
   </div>
 <% end %>
 
+<h1>User info</h1>
+<%= image_tag @book.user.get_profile_image(100,100) %>
+<h3>name：<%= @book.user.name %></h3>
+<h3>introduction：<%= @book.user.introduction %></h3>
+<%= link_to edit_user_path(@book.user.id) do %>
+  <button type="button" class="btn btn-outline-secondary"><i class="fas fa-user-cog"></i></button>
+<% end %>
+
+
+
 <div class="show_box">
   <div class="show">
     <h4>Title:</h4>
-    <p><%= @list.title %></p>
+    <p><%= @book.title %></p>
   </div>
 
   <div class="show">
     <h4>body:</h4>
-    <p><%= @list.body %></p>
+    <p><%= @book.body %></p>
   </div>
-  <div>投稿ユーザー画像：<%= image_tag @list.user.get_profile_image(100,100) %></div>
-  <p><%= link_to @list.user.name, user_path(@list.user.id) %></p>
-  <div>投稿日：<%= @list.created_at.strftime('%Y/%m/%d') %></div>
+  <div>投稿ユーザー画像：<%= image_tag @book.user.get_profile_image(100,100) %></div>
+  <p><%= link_to @book.user.name, user_path(@book.user.id) %></p>
+  <div>投稿日：<%= @book.created_at.strftime('%Y/%m/%d') %></div>
 </div>
 
 <div　class="click">
-  <% if @list.user == current_user %>
-    <%= link_to "Edit", edit_book_path(@list.id) %>
+  <% if @book.user == current_user %>
+    <%= link_to "Edit", edit_book_path(@book.id) %>
   <% end %>
   <%= link_to "Back", books_path %>
-  <% if @list.user == current_user %>
-    <%= link_to "Destroy", book_path(@list.id), method: :delete, "data-confirm" => "Are you sure?" %>
+  <% if @book.user == current_user %>
+    <%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "Are you sure?" %>
   <% end %>
 </div>
 
+<%= form_with model: @list,url:books_path, method: :post do |f| %>
 
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+
+  <h4>Body</h4>
+  <%= f.text_area :body %>
+  <div>
+    <%= f.submit "Create Book", class:"btn btn-success" %>
+  </div>
+
+<% end %>
