--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>プロフィール編集</h2>
+<h2>User info</h2>
 <% if @user.errors.any? %>
   <div class="error_box">
     <%= @user.errors.count %> errors prohibited this book from being saved:
@@ -12,18 +12,16 @@
   </div>
 <% end %>
 <%= form_with model: @user do |f| %>
-  <div>
-    <label for="inputName">Name</label>
-    <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  </div>
-  <div>
-    <label for="inputName">自己紹介</label>
-    <%= f.text_field :introduction, autofocus: true, id:"inputName", placeholder:""%>
-  </div>
-  <div>
-    <label for="inputImage">ProfileImage</label>
-    <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-  </div>
-
-  <%= f.submit "変更を保存" %>
+  
+  <label for="inputName">Name</label>
+  <div><%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%></div>
+  
+  <label for="inputImage">Image</label>
+  <div><%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %></div>
+  
+  <label for="inputName">Introduction</label>
+  <div><%= f.text_field :introduction, autofocus: true, id:"inputName", placeholder:""%></div>
+  
+  
+  <%= f.submit "Update User", class:"btn btn-secondary" %>
 <% end %>
