--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,58 +1,59 @@
-<% if flash[:notice] %>
-  <div class="flash">
-    <%= flash[:notice] %>
-  </div>
-<% end %>
-<% if flash[:notice_update] %>
-  <div class="flash">
-    <%= flash[:notice_update] %>
-  </div>
-<% end %>
-
-<h1>User info</h1>
-<%= image_tag @book.user.get_profile_image(100,100) %>
-<h3>name：<%= @book.user.name %></h3>
-<h3>introduction：<%= @book.user.introduction %></h3>
-<%= link_to edit_user_path(@book.user.id) do %>
-  <button type="button" class="btn btn-outline-secondary"><i class="fas fa-user-cog"></i></button>
-<% end %>
-
-
-
-<div class="show_box">
-  <div class="show">
-    <h4>Title:</h4>
-    <p><%= @book.title %></p>
-  </div>
-
-  <div class="show">
-    <h4>body:</h4>
-    <p><%= @book.body %></p>
-  </div>
-  <div>投稿ユーザー画像：<%= image_tag @book.user.get_profile_image(100,100) %></div>
-  <p><%= link_to @book.user.name, user_path(@book.user.id) %></p>
-  <div>投稿日：<%= @book.created_at.strftime('%Y/%m/%d') %></div>
-</div>
-
-<div　class="click">
-  <% if @book.user == current_user %>
-    <%= link_to "Edit", edit_book_path(@book.id) %>
+<div class="container">
+  <% if flash[:notice] %>
+    <div class="flash">
+      <%= flash[:notice] %>
+    </div>
   <% end %>
-  <%= link_to "Back", books_path %>
-  <% if @book.user == current_user %>
-    <%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+  <% if flash[:notice_update] %>
+    <div class="flash">
+      <%= flash[:notice_update] %>
+    </div>
   <% end %>
-</div>
-
-<%= form_with model: @list,url:books_path, method: :post do |f| %>
-
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-
-  <h4>Body</h4>
-  <%= f.text_area :body %>
-  <div>
-    <%= f.submit "Create Book", class:"btn btn-success" %>
+  
+  <h1>User info</h1>
+  <%= image_tag @book.user.get_profile_image(100,100) %>
+  <h3>name：<%= @book.user.name %></h3>
+  <h3>introduction：<%= @book.user.introduction %></h3>
+  <%= link_to edit_user_path(@book.user.id) do %>
+    <button type="button" class="btn btn-outline-secondary"><i class="fas fa-user-cog"></i></button>
+  <% end %>
+  
+  <h1>New book</h1>
+  <%= form_with model: @list,url:books_path, method: :post do |f| %>
+  
+    <h4>Title</h4>
+    <%= f.text_field :title %>
+  
+    <h4>Opinion</h4>
+    <%= f.text_area :body %>
+    <div>
+      <%= f.submit "Create Book", class:"btn btn-success" %>
+    </div>
+  
+  <% end %>
+  <h1>Book detail</h1>
+  <div class="show_box">
+    <div class="show">
+      <p><%= @book.title %></p>
+    </div>
+  
+    <div class="show">
+      <p><%= @book.body %></p>
+    </div>
+    <div><%= image_tag @book.user.get_profile_image(100,100) %></div>
+    <p><%= link_to @book.user.name, user_path(@book.user.id) %></p>
   </div>
-
-<% end %>
+  
+  <div　class="click">
+    <% if @book.user == current_user %>
+      <%= link_to "Edit", edit_book_path(@book.id) %>
+    <% end %>
+    <%= link_to "Back", books_path %>
+    <% if @book.user == current_user %>
+      <%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+    <% end %>
+  </div>
+  
+  
+  
+</div>
