--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,9 @@
-<div><h1>Welcome to <i class="fas fa-book"></i>Bookers!</h1></div>
+<div class="container">
+  <div class="row">
+    <h1 class="col">
+      <div style="text-align:center; padding: 100px">
+        Welcome to <i class="fas fa-book"></i>Bookers!
+      </div>
+    </h1>
+  </div>
+</div>
