--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,49 +1,71 @@
 <div class="container">
-  <% if flash[:notice_sign_up] %>
-    <div class="flash">
-      <%= flash[:notice_sign_up] %>
+  <div class="row">
+    <div class="col-3">
+      <% if flash[:notice_sign_up] %>
+        <div class="flash">
+          <%= flash[:notice_sign_up] %>
+        </div>
+      <% end %>
+      <% if flash[:notice_log_in] %>
+        <div class="flash">
+          <%= flash[:notice_log_in] %>
+        </div>
+      <% end %>
+      <% if flash[:notice_update] %>
+        <div class="flash">
+          <%= flash[:notice_update] %>
+        </div>
+      <% end %>
+      
+      <h1>User info</h1>
+      <%= image_tag @user.get_profile_image(100,100) %>
+      <table class="table">
+        <tr>
+          <th>name</th>
+          <th><%= @user.name %></th>
+        </tr>
+        <tr>
+          <th>introduction</th>
+          <th><%= @user.introduction %></th>
+        </tr>
+      </table>
+      <%= link_to edit_user_path(@user.id) do %>
+        <button type="button" class="btn btn-outline-secondary btn-block"><i class="fas fa-user-cog"></i></button>
+      <% end %>
+      <h1>New book</h1>
+      <%= form_with model: @list,url:books_path, method: :post do |f| %>
+      
+        <h4>Title</h4>
+        <%= f.text_field :title %>
+      
+        <h4>Opinion</h4>
+        <%= f.text_area :body %>
+        <div>
+          <%= f.submit "Create Book", class:"btn btn-success" %>
+        </div>
+      
+      <% end %>
     </div>
-  <% end %>
-  <% if flash[:notice_log_in] %>
-    <div class="flash">
-      <%= flash[:notice_log_in] %>
+    <div class="col-1"></div>
+    <div class="col-8">
+
+      <h1>Books</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">Title</th>
+            <th scope="col">Opinion</th>
+          </tr>
+          <% @user_books.each do |book| %>
+            <tr>
+              <th scope="col"><%= image_tag @user.get_profile_image(100,100) %></th>
+              <th scope="col"><%= link_to book.title, book_path(book.id) %></th>
+              <th scope="col"><%= book.body %></th>
+            </tr>
+          <% end %>
+        </thead>
+      </table>
     </div>
-  <% end %>
-  <% if flash[:notice_update] %>
-    <div class="flash">
-      <%= flash[:notice_update] %>
-    </div>
-  <% end %>
-  
-  <h1>User info</h1>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <h3>name：<%= @user.name %></h3>
-  <h3>introduction：<%= @user.introduction %></h3>
-  <%= link_to edit_user_path(@user.id) do %>
-    <button type="button" class="btn btn-outline-secondary"><i class="fas fa-user-cog"></i></button>
-  <% end %>
-  
-  <h1>New book</h1>
-  <%= form_with model: @list,url:books_path, method: :post do |f| %>
-  
-    <h4>Title</h4>
-    <%= f.text_field :title %>
-  
-    <h4>Opinion</h4>
-    <%= f.text_area :body %>
-    <div>
-      <%= f.submit "Create Book", class:"btn btn-success" %>
-    </div>
-  
-  <% end %>
-  <h1>Books</h1>
-  <% @user_books.each do |book| %>
-  <div>
-    <%= image_tag @user.get_profile_image(100,100) %>
-    <p>Title：<%= link_to book.title, book_path(book.id) %></p>
-    <p>Opinion：<%= book.body %></p>
   </div>
-  <% end %>
-
-
 </div>
