--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,7 +12,7 @@
     </div>
   <% end %>
   <div class="row">
-    <div class="col-3">
+    <div class="col-md-3">
       <% if flash[:notice_destroy] %>
         <div class="flash">
           <%= flash[:notice_destroy] %>
@@ -45,11 +45,9 @@
         <div>
           <%= f.submit "Create Book", class:"btn btn-success" %>
         </div>
-
       <% end %>
     </div>
-    <div class="col-1"></div>
-    <div class="col-8">
+    <div class="col-md-8 offset-md-1">
       <h1>Books</h1>
       <table class="table">
         <thead>
