--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-3">
+    <div class="col-md-3">
       <% if flash[:notice] %>
         <div class="flash">
           <%= flash[:notice] %>
@@ -42,8 +42,7 @@
       
       <% end %>
     </div>
-    <div class="col-1"></div>
-    <div class="col-8">
+    <div class="col-md-8 offset-md-1">
       <h1>Book detail</h1>
       <table class="table">
         <thead>
