--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-3">
+    <div class="col-md-3">
       <% if flash[:notice_sign_up] %>
         <div class="flash">
           <%= flash[:notice_sign_up] %>
@@ -46,9 +46,7 @@
       
       <% end %>
     </div>
-    <div class="col-1"></div>
-    <div class="col-8">
-
+    <div class="col-md-8 offset-md-1">
       <h1>Books</h1>
       <table class="table">
         <thead>
