--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,20 +27,7 @@
       <%= link_to edit_user_path(@book.user.id) do %>
         <button type="button" class="btn btn-outline-secondary btn-block"><i class="fas fa-user-cog"></i></button>
       <% end %>
-      
-      <h1>New book</h1>
-      <%= form_with model: @list,url:books_path, method: :post do |f| %>
-      
-        <h4>Title</h4>
-        <%= f.text_field :title %>
-      
-        <h4>Opinion</h4>
-        <%= f.text_area :body %>
-        <div>
-          <%= f.submit "Create Book", class:"btn btn-success" %>
-        </div>
-      
-      <% end %>
+      <%= render 'users/list', list: @list %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h1>Book detail</h1>
