--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,7 +11,7 @@
           <%= flash[:notice_update] %>
         </div>
       <% end %>
-      
+
       <h1>User info</h1>
       <%= image_tag @book.user.get_profile_image(100,100) %>
       <table class="table">
@@ -46,6 +46,7 @@
             </th>
             <th scope="col"><%= @book.title %></th>
             <th scope="col"><%= @book.body %></th>
+            <th scope="col"><%= link_to "#{@book.book_comments.count} コメント", book_path(@book.id) %></th>
             <% if current_user == @book.user %>
               <th scope="col">
                 <%= link_to edit_book_path(@book.id) do %>
@@ -61,6 +62,30 @@
           </tr>
         </thead>
       </table>
+      <div>
+        <% if flash[:notice_comment_destroy] %>
+          <div class="flash">
+            <%= flash[:notice_comment_destroy] %>
+          </div>
+        <% end %>
+        <p>コメント件数：<%= @book.book_comments.count %></p>
+        <% @book.book_comments.each do |post_comment| %>
+          <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
+          <%= post_comment.user.name %>
+          <%= post_comment.created_at.strftime('%Y/%m/%d') %>
+          <%= post_comment.id %>
+          <%= post_comment.comment %>
+          <% if @book.user == current_user %>
+            <%= link_to "削除", book_book_comment_path(post_comment.book, post_comment), method: :delete %>
+          <% end %>
+        <% end %>
+      </div>
+      <div>
+        <%= form_with model: [@book, @book_comment] do |f| %>
+          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+          <%= f.submit "送信する" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
