--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -75,8 +75,10 @@
           <%= post_comment.created_at.strftime('%Y/%m/%d') %>
           <%= post_comment.id %>
           <%= post_comment.comment %>
-          <% if @book.user == current_user %>
-            <%= link_to "削除", book_book_comment_path(post_comment.book, post_comment), method: :delete %>
+          <% if post_comment.user == current_user %>
+            <%= link_to book_book_comment_path(post_comment.book, post_comment), method: :delete do %>
+              <button type="button" class="btn btn-danger">Destroy</button>
+            <% end %>
           <% end %>
         <% end %>
       </div>
