--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -47,6 +47,21 @@
             <th scope="col"><%= @book.title %></th>
             <th scope="col"><%= @book.body %></th>
             <th scope="col"><%= link_to "#{@book.book_comments.count} コメント", book_path(@book.id) %></th>
+            <th scope="col">
+              <% if @book.favorited_by?(current_user) %>
+                <p>
+                  <%= link_to book_favorites_path(@book), method: :delete do %>
+                    A<%= @book.favorites.count %> いいね
+                  <% end %>
+                </p>
+                <% else %>
+                <p>
+                  <%= link_to book_favorites_path(@book), method: :post do %>
+                    B<%= @book.favorites.count %> いいね
+                  <% end %>
+                </p>
+              <% end %>
+            </th>
             <% if current_user == @book.user %>
               <th scope="col">
                 <%= link_to edit_book_path(@book.id) do %>
@@ -72,7 +87,6 @@
         <% @book.book_comments.each do |post_comment| %>
           <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
           <%= link_to post_comment.user.name, user_path(post_comment.user.id) %>
-
           <%= post_comment.comment %>
           <% if post_comment.user == current_user %>
             <%= link_to book_book_comment_path(post_comment.book, post_comment), method: :delete do %>
