--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -44,6 +44,7 @@
             <th scope="col">Title</th>
             <th scope="col">Opinion</th>
             <th scope="col">Comment</th>
+            <th scope="col">Favorite</th>
           </tr>
           <% @lists.each do |list| %>
             <tr>
@@ -55,6 +56,23 @@
               <th scope="col"><%= link_to list.title, book_path(list.id) %></th>
               <th scope="col"><%= list.body %></th>
               <th scope="col"><%= link_to "#{list.book_comments.count} コメント", book_path(list.id) %></th>
+              <th scope="col">
+                <% if list.favorited_by?(current_user) %>
+                  <p>
+                    <%= link_to book_favorites_path(list), :style=>"color:red", method: :delete do %>
+                      <i class="fas fa-heart"></i>
+                      <%= list.favorites.count %>
+                    <% end %>
+                  </p>
+                  <% else %>
+                  <p>
+                    <%= link_to book_favorites_path(list), method: :post do %>
+                      <i class="fas fa-heart"></i>
+                      <%= list.favorites.count %>
+                    <% end %>
+                  </p>
+                <% end %>
+              </th>
             </tr>
           <% end %>
         </thead>
